# goit-pythonweb-hw-06

./: connect.py  models.py  my_select.py  pyproject.toml  seeds.py
migrations/: env.py
migrations/versions/: 45a8e2f55529_init.py
